Fix the broken layout #719

--- a/pupSpa/style.css
+++ b/pupSpa/style.css
@@ -6,9 +6,11 @@ body {
 .grid{
     display: grid;
     grid-template: 100px 8fr 5fr 4fr 5fr 80px / repeat(6, 1fr);
+
 }
 header{
-
+    grid-column-start: 1;
+    grid-column-end: 6;
 }
 .title{
     margin: auto;
@@ -25,6 +27,8 @@ header{
     font-size: 3em;
     font-weight: 300;
     letter-spacing: 3.7px;
+    grid-column-start: 1;
+    grid-column-end: 6;
 }
 p, .banner-contents {
     max-width: 80%;
@@ -36,6 +40,8 @@ img {
 }
 .about {
     background-color: #f0f0f0;
+    grid-column-start: 1;
+    grid-column-end: 6;
 }
 .text {
     color: #2f2d2d;
@@ -86,4 +92,6 @@ footer {
     font-family: Poppins;
     font-size: 16;
     letter-spacing: 0.4px;
+    grid-column-start: 1;
+    grid-column-end: 6;
 }
